Fix indentation in header section of index.html

--- a/bahamasair-baggage-report-starter-with-logo/index.html
+++ b/bahamasair-baggage-report-starter-with-logo/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <header>
-    <div class="wrap brand" role="banner" aria-label="Bahamasair">\n      <img src="assets/bahamasair-logo.jpeg" alt="Bahamasair logo" style="height:40px;width:auto;object-fit:contain" />
+    <div class="wrap brand" role="banner" aria-label="Bahamasair">      <img src="assets/bahamasair-logo.jpeg" alt="Bahamasair logo" style="height:40px;width:auto;object-fit:contain" />
       <h1>Baggage Irregularity Report</h1>
     </div>
   </header>
